# AgenticAI

./: README.md
agents/: README.md
agents/1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  README.md  app.py
agents/1_foundations/me/: summary.txt
agents/2_openai/: 1_lab1.ipynb  2_lab2.ipynb  4_lab4.ipynb  README.md  fix_search_printing.py
agents/2_openai/deep_research/: deep_research.py  email_agent.py  planner_agent.py  research_manager.py  search_agent.py  writer_agent.py
agents/3_crew/: README.md
agents/3_crew/coder/: pyproject.toml
agents/3_crew/coder/output/: code_and_output.txt
agents/3_crew/coder/src/coder/: main.py
agents/3_crew/debate-original/: pyproject.toml
agents/3_crew/debate-original/output/: decide.md  oppose.md  propose.md
agents/3_crew/debate/output/: decide.md  oppose.md  propose.md
agents/3_crew/financial_researcher/output/: report.md
agents/3_crew/stock_picker/: pyproject.toml
agents/3_crew/stock_picker/memory/: chroma.sqlite3  long_term_memory_storage.db
agents/3_crew/stock_picker/output/: decision.md  research_report.json  trending_companies.json
agents/3_crew/stock_picker/src/stock_picker/: crew.py  main.py
agents/4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  README.md  app.py  sidekick.py  sidekick_tools.py
agents/4_langgraph/sandbox/: italy_itinerary.txt
agents/5_autogen/: 1_lab1_autogen_agentchat.ipynb  2_lab2_autogen_agentchat.ipynb  3_lab3_autogen_core.ipynb  4_lab4_autogen_distributed.ipynb  README.md  world.py
agents/5_autogen/sandbox/: flights.md
agents/6_mcp/: README.md
(+8 files in other folders)
