[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock_picker"
version = "0.1.0"
description = "Stock picker crew"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "crewai[tools]>=0.108.0,<1.0.0",
  "openai",
  "chromadb",
  "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
# register the console script 'run_crew' that uv expects
run_crew = "stock_picker.main:run"
